--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -48,9 +48,11 @@
     box-sizing: border-box;
 }
 html{
+    overflow-x : hidden;
     scroll-behavior: smooth;
 }
 body{
+    overflow-x : hidden;
     margin: var(--header-height) 0 0 0;
     font-family: var(--boody-font);
     font-size: var(--z-normal);
